Correction erreur SensioLab

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "symfony/framework-standard-edition",
     "license": "proprietary",
     "type": "project",
+    "description": "The \"Symfony Standard Edition\" distribution",
     "autoload": {
         "psr-0": {
             "": "src/",
