--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,6 +2,12 @@ ag_las_vegas:
     resource: "@AGLasVegasBundle/Resources/config/routing.yml"
     prefix:   /
 
+ag_user:
+    resource: "@AGUserBundle/Resources/config/routing.yml"
+    prefix:   /
+
+# Vendors
+
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
@@ -20,3 +26,6 @@ fos_user_resetting:
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
+
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.xml"
