--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "stof/doctrine-extensions-bundle": "dev-master",
         "jms/security-extra-bundle": "dev-master",
-        "knplabs/knp-paginator-bundle": "2.3.*@dev"
+        "liip/imagine-bundle": "^1.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
