--- a/src/AG/LasVegasBundle/Resources/config/services.yml
+++ b/src/AG/LasVegasBundle/Resources/config/services.yml
@@ -1,4 +1,9 @@
 services:
-#    ag_las_vegas.example:
-#        class: AG\LasVegasBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
+    ag.image_rotator:
+        class: AG\LasVegasBundle\Services\ImageRotator
+
+    ag.thumbnail_handler:
+        class: AG\LasVegasBundle\DoctrineListener\ThumbnailHandler
+        arguments: [@liip_imagine.cache.manager]
+        tags:
+            - { name: doctrine.event_listener, event: postRemove }
